Update page content

--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="实象科技 (Real Image) 官方网站。">
     <meta name="author" content="Derek Hsu">
 
-    <title>Real Image</title>
+    <title>Real Image | 实象科技</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.lug.ustc.edu.cn/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.lug.ustc.edu.cn/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
     <link href="css/grayscale.min.css" rel="stylesheet">
@@ -25,7 +23,7 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="//cdn.staticfile.org/html5shiv/3.7.0/html5shiv.min.js"></script>
+        <script src="//cdn.bootcss.com/html5shiv/r29/html5.js"></script>
         <script src="//cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
@@ -38,10 +36,10 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    菜单 <i class="fa fa-bars"></i>
+                    <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Real</span> Image
+                    <img src="img/realimage.svg"/><span class="light">Real</span>Image
                 </a>
             </div>
 
@@ -53,10 +51,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">关于</a>
+                        <a class="page-scroll" href="#service">服务</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">服务</a>
+                        <a class="page-scroll" href="#about">关于</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">联系我们</a>
@@ -73,10 +71,9 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Grayscale</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.
-                            <br>Created by Start Bootstrap.</p>
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                        <h1 class="brand-heading"><span class="accent">改变</span><span>和世界的</span><br>交互方式</h1>
+                        <p class="intro-text">用全球领先的计算机视觉技术，开启无限的可能。</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -86,53 +83,72 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+    <!-- Service Sections -->
+    <div id="service"></div>
+    <section class="content-section text-center">
+        <div class="edu-section application-section">
+            <div class="backdrop"></div>
+            <div class="application-section-inner">
+                <div class="container">
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                        <h2 class="section-title"><span class="accent">教育</span> / 开启全新学习机会</h2>
+                        <p class="section-body">我们提供混合现实的解决方案，为教育工作者与学习者的教学开启新的机会。通过生动逼真的学习场景及丰富有趣的沉浸交互，我们将被动的学习变成主动的探索，激发学习者的学习动力，带来惊喜的学习效果。</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+    <section class="content-section text-center">
+        <div class="design-section application-section">
+            <div class="backdrop"></div>
+            <div class="application-section-inner">
+                <div class="container">
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                        <h2 class="section-title"><span class="accent">设计</span> / 激发想象和创造力</h2>
+                        <p class="section-body">我们用混合现实的视觉技术，激发设计工作者的想象力和创造力。混合现实技术使得设计工作者用全新的方式创作内容，并把结果方便、快捷地转化到现实世界中进行深度体验，带来全新高效的工作模式，和即看即得的展示体验。</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+    <section class="content-section text-center">
+        <div class="ent-section application-section">
+            <div class="backdrop"></div>
+            <div class="application-section-inner">
+                <div class="container">
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                        <h2 class="section-title"><span class="accent">娱乐</span> / 打造震撼娱乐体验</h2>
+                        <p class="section-body">基于全息影像技术，我们为参与者打造前所未有的娱乐体验。<br>令参与者实现同数字内容的深度交互，带来360度的沉浸式感官冲击。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="content-section text-center secondary">
+        <div class="container">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                <h2 class="section-title">关于我们</h2>
+                <p class="section-body">实象科技 (Real Image) 是一家基于计算机视觉技术为客户提供解决方案的公司。我们相信计算机视觉技术会给不同行业带来无限的可能，并始终致力于向每一位客户提供领先、可依赖的服务。</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-center secondary">
+        <div class="container">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                <h2 class="section-title">联系我们</h2>
+                <p class="section-body"><i class="fa fa-envelope-o"></i> <a class="mail" href="mailto:info@realimage.com.cn">info@realimage.com.cn</a>
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="content-section secondary"></section>
 
     <!-- Map Section -->
     <!--<div id="map"></div>-->
@@ -140,7 +156,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            <p>Copyright &copy; 2017 <a href="https://www.realimage.com.cn">Real Image</a>. All Rights Reserved.</p>
         </div>
     </footer>
 
