Fix site link on the footer

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; 2017 <a href="https://www.realimage.com.cn">Real Image</a>. All Rights Reserved.</p>
+            <p>Copyright &copy; 2017 <a href="#">Real Image</a>. All Rights Reserved.</p>
         </div>
     </footer>
 
