--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                         <h1 class="brand-heading"><span class="accent">改变</span><span>和世界的</span><br>交互方式</h1>
                         <p class="intro-text">用全球领先的计算机视觉技术，开启无限的可能。</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#service" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
