--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="container">
                     <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                         <h2 class="section-title"><span class="accent">设计</span> / 激发想象和创造力</h2>
-                        <p class="section-body">我们用混合现实的视觉技术，激发设计工作者的想象力和创造力。混合现实技术使得设计工作者用全新的方式创作内容，并把结果方便、快捷地转化到现实世界中进行深度体验，带来全新高效的工作模式，和即看即得的展示体验。</p>
+                        <p class="section-body">我们用混合现实的视觉技术，激发设计工作者的想象力和创造力。混合现实技术使得设计工作者用全新的方式创作内容，并把结果方便快捷地转化到现实世界中进行深度体验，带来全新高效的工作模式和即看即得的展示体验。</p>
                     </div>
                 </div>
             </div>
